--- a/app/views/assignments/edit/_review_strategy.html.erb
+++ b/app/views/assignments/edit/_review_strategy.html.erb
@@ -89,7 +89,7 @@
         </span>
     </td>
   </tr>
-
+  <!--demo-->
   <tr id="instructor_selected_review_mapping_mechanism" hidden='hidden'>
     <td>
       <%= form_tag :controller => 'review_mapping', :action => 'automatic_review_mapping', :id => @assignment_form.assignment.id do %>
