--- a/app/views/assignments/edit/_review_strategy.html.erb
+++ b/app/views/assignments/edit/_review_strategy.html.erb
@@ -139,6 +139,15 @@
     </td>
   </tr>
 
+  <tr>
+    <td id='add_instructor_as_participant'>
+      <input name="assignment_form[assignment][is_instructor_added_as_participant]" type="hidden" value="false"/>
+      <%= check_box_tag('assignment_form[assignment][is_instructor_added_as_participant]', 'true', @assignment_form.assignment.is_instructor_added_as_participant) %>
+      <%= label_tag('assignment_form[assignment][is_instructor_added_as_participant]', 'Add Yourself As A Participant?') %>
+      <img src="/assets/info.png" title='Select if you want to add yourself as a participant'>
+    </td>
+  </tr>
+
   <!--#E1870-->
   <% if @assignment_form.assignment.rounds_of_reviews > 1 %>
     <tr>
