--- a/app/views/assignments/edit/_review_strategy.html.erb
+++ b/app/views/assignments/edit/_review_strategy.html.erb
@@ -140,9 +140,9 @@
   </tr>
 
   <tr>
-    <td id='add_instructor_as_participant'>
+    <td>
       <input name="assignment_form[assignment][is_instructor_added_as_participant]" type="hidden" value="false"/>
-      <%= check_box_tag('assignment_form[assignment][is_instructor_added_as_participant]', 'true') %>
+      <%= check_box_tag('assignment_form[assignment][is_instructor_added_as_participant]') %>
       <%= label_tag('assignment_form[assignment][is_instructor_added_as_participant]', 'Add Yourself As A Participant?') %>
       <img src="/assets/info.png" title='Select if you want to add yourself as a participant'>
     </td>
