--- a/app/views/assignments/list_submissions.html.erb
+++ b/app/views/assignments/list_submissions.html.erb
@@ -39,7 +39,7 @@
     <% @teams.each do |team| %>
       <% @l = @l+1 %>
       <tr>
-        <% topic_identifier, topic_name, users_for_curr_team, participants = get_data_for_list_submissions(team) %>
+        <% topic_id, topic_identifier, topic_name, users_for_curr_team, participants = get_data_for_list_submissions(team) %>
 
         <!--Topic name-->
         <% if @assignment.topics? %>
@@ -51,7 +51,17 @@
           <% team_name_color = get_team_name_color_in_list_submission(team) %>
           <td><p style = <%="color:#{team_name_color}"%>><%= team.name %></p>
           <% unless participants.empty? %>
-            <%= link_to 'Assign Grade', { controller: 'grades', action: 'view_team', id: participants.first.id}, target: '_blank' %></td>
+            <% current_role = Role.find(session[:user].role).name %>
+            <% if @assignment.get_current_stage()=="Finished" %>
+              <%= link_to 'Assign grade', { controller: 'grades', action: 'view_team', id: participants.first.id}, target: '_blank' unless participants.first.nil?%>
+            <% elsif @assignment.get_current_stage()=="review" %>
+              <%= link_to 'Add review', {controller: 'review_mapping', action: 'assign_reviewer_dynamically', assignment_id: @assignment.id, topic_id: topic_id, reviewer_id: current_user, user_role: current_role } %>
+            <% else %>
+              <% @sorted_responses = @existing_responses.where(:reviewer_id=>@participant.id, :reviewee_id=>team.id) %>
+              <% @sorted_responses = @sorted_responses.sort_by {|obj| obj.updated_at} # the latest should be at the last%>
+              <% @latest_response = @sorted_responses.last %>
+              <%= link_to "Update review", {:controller => 'response', :action => 'new', :id => @latest_response.id} %>
+            <% end %>
           <% end %>
         <% end %>
 
