--- a/app/views/assignments/edit/_review_strategy.html.erb
+++ b/app/views/assignments/edit/_review_strategy.html.erb
@@ -142,7 +142,7 @@
   <tr>
     <td>
       <input name="assignment_form[assignment][is_instructor_added_as_participant]" type="hidden" value="false"/>
-      <%= check_box_tag('assignment_form[assignment][is_instructor_added_as_participant]') %>
+      <%= check_box_tag('add_as_participant') %>
       <%= label_tag('assignment_form[assignment][is_instructor_added_as_participant]', 'Add Yourself As A Participant?') %>
       <img src="/assets/info.png" title='Select if you want to add yourself as a participant'>
     </td>
