--- a/app/views/assignments/edit/_review_strategy.html.erb
+++ b/app/views/assignments/edit/_review_strategy.html.erb
@@ -139,6 +139,15 @@
     </td>
   </tr>
 
+  <tr>
+    <td >
+      <input name='add_instructor' type="hidden" value="false"/>
+      <%= check_box_tag('add_instructor', 'true','true') %>
+      <%= label_tag('add_instructor', 'Add instructor as participant?') %>
+      <img src="/assets/info.png" title='Select if you want a person to allow review their own submission'>
+    </td>
+  </tr>
+
   <!--#E1870-->
   <% if @assignment_form.assignment.rounds_of_reviews > 1 %>
     <tr>
