--- a/app/views/grades/view_team.html.erb
+++ b/app/views/grades/view_team.html.erb
@@ -32,11 +32,11 @@
 <!--Toggle submission-->
 <button onclick="toggleFunction('<%= @participant.id.to_s%>')" class="btn btn-default">Show Submission</button>
 <div id="<%= @participant.id.to_s%>" style="display:none;">
-<% if @participant.team.hyperlinks.try(:length) %>
-  <%= render :partial => 'submitted_content/hyperlink', :locals => {participant: @participant, stage: @stage} %>
-  <% else %>
+<!---% if @participant.team.hyperlinks.try(:length) %>
+  <-%= render :partial => 'submitted_content/hyperlink', :locals => {participant: @participant, stage: @stage} %--->
+  <!---% else %--->
  <b>No Submission</b>
-<% end %>
+<!---% end %--->
 </div><br><br>
 
 <!-- For each of the models in the list, generate a heatgrid table. this is the outer most loop -->
