--- a/app/views/assignments/edit/_review_strategy.html.erb
+++ b/app/views/assignments/edit/_review_strategy.html.erb
@@ -143,7 +143,7 @@
 
   <!-- Checkbox provides an option to the instructor to add himself as a participant-->
   <tr>
-    <td> <% assignment_form.assignment.is_instructor_a_participant %>
+    <td> <% @assignment_form.assignment.is_instructor_a_participant %>
       <input name='add_instructor' type="hidden" value="false"/>
       <%= check_box_tag('add_instructor') %>
       <%= label_tag('add_instructor', 'Add yourself as a participant?') %>
