--- a/app/views/assignments/edit/_review_strategy.html.erb
+++ b/app/views/assignments/edit/_review_strategy.html.erb
@@ -143,9 +143,9 @@
 
   <!-- Checkbox provides an option to the instructor to add himself as a participant-->
   <tr>
-    <td> <% puts @assignment_form.is_instructor_a_participant? %>
+    <td> <% puts @assignment.is_instructor_a_participant? %>
       <input name='add_instructor' type="hidden" value="false"/>
-      <%= check_box_tag('add_instructor', false, @assignment_form.is_instructor_a_participant?) %>
+      <%= check_box_tag('add_instructor', false, @assignment.is_instructor_a_participant?) %>
       <%= label_tag('add_instructor', 'Add yourself as a participant?') %>
       <img src="/assets/info.png" title='Select if you want to add yourself as a participant to this assignment'>
     </td>
