Implemented feature to add instructor as a participant while assignment creation

--- a/app/views/assignments/edit/_review_strategy.html.erb
+++ b/app/views/assignments/edit/_review_strategy.html.erb
@@ -146,7 +146,7 @@
       <input name='add_instructor' type="hidden" value="false"/>
       <%= check_box_tag('add_instructor', value = "1", checked = is_instructor_a_participant?)%>
       <%= label_tag('add_instructor', 'Add yourself as a participant?') %>
-      <img src="/assets/info.png" title='If you add yourself as a participant then you will be able to perform student reviews for this assignment'>
+      <img src="/assets/info.png" title='If you add yourself as a participant then you will be able to perform reviews of students for this assignment'>
     </td>
   </tr>
 
